--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ numpy==1.14.5
 pandas==0.23.3
 python-dateutil==2.7.3
 pytz==2018.5
+requests==2.21.0
 six==1.11.0
 SQLAlchemy==1.3.0
 PyMySQL==0.9.3
