--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-SQLAlchemy==2.3.2
 itsdangerous==0.24
 Jinja2==2.10.1
 MarkupSafe==1.0
+mysqlclient==1.4.2
 numpy==1.14.5
 pandas==0.23.3
 python-dateutil==2.7.3
