added datetime to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.7.1
 certifi==2018.4.16
 click==6.7
 config==0.3.9
+datetime==3.7.3
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
 itsdangerous==0.24
